--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "author": "Yuttasak Pannawat <yuttasakcom@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "client": "cd client && npm start",
     "server": "env-cmd ./.env.dev nodemon server/server.js --exec babel-node",
-    "dev": "concurrently --names \"server,client\" \"npm run server --silent\""
+    "dev": "concurrently --names \"server,client\" \"npm run server --silent\" \"npm run client --silent\""
   },
   "dependencies": {
     "apollo-server-express": "^2.4.8",
     "bcrypt": "^3.0.5",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "graphql": "^14.2.0",
     "graphql-import": "^0.7.1",
